--- a/R_cours.html
+++ b/R_cours.html
@@ -2120,17 +2120,17 @@ document.addEventListener('DOMContentLoaded', function(e) {
 
 <p><strong>Contenu</strong></p>
 <ol type="1">
-<li>Présentation et installation de R</li>
-<li>Présentation de RStudio</li>
-<li>Structures de données</li>
-<li>Préparation d’un jeu de données</li>
-<li>Manipulation d’un jeu de données</li>
-<li>Analyse d’un jeu de données</li>
-<li>Visualisation d’un jeu de données</li>
+<li><a href="#/presentation">Présentation et installation de R</a></li>
+<li><a href="#/rstudio">Présentation de RStudio</a></li>
+<li><a href="#/structures">Structures de données</a></li>
+<li><a href="#/preparation">Préparation d’un jeu de données</a></li>
+<li><a href="#/manipulation">Manipulation d’un jeu de données</a></li>
+<li><a href="#/analyse">Analyse d’un jeu de données</a></li>
+<li><a href="#/visualisation">Visualisation d’un jeu de données</a></li>
 </ol>
 </section>
 <section>
-<section id="présentation-de-r" class="title-slide slide level1">
+<section id="presentation" class="title-slide slide level1">
 <h1>1. Présentation de R</h1>
 
 </section>
@@ -2347,7 +2347,7 @@ library(tidyverse)
 library(questionr)</code></pre>
 </section></section>
 <section>
-<section id="structures-de-données" class="title-slide slide level1">
+<section id="structures" class="title-slide slide level1">
 <h1>3. Structures de données</h1>
 
 </section>
@@ -2696,7 +2696,7 @@ différents (vecteur, matrice, dataframe, autre liste, fonction)</p>
 ## [1] TRUE</code></pre>
 </section></section>
 <section>
-<section id="préparation-dun-jeu-de-données" class="title-slide slide level1">
+<section id="preparation" class="title-slide slide level1">
 <h1>4. Préparation d’un jeu de données</h1>
 
 </section>
@@ -3137,7 +3137,7 @@ pop</p>
 ## 4 France  Europe     2007    80.7 61083916</code></pre>
 </section></section>
 <section>
-<section id="manipulation-dun-jeu-de-données" class="title-slide slide level1">
+<section id="manipulation" class="title-slide slide level1">
 <h1>5. Manipulation d’un jeu de données</h1>
 
 </section>
@@ -3758,7 +3758,7 @@ le pourcentage que cela représente sur les vols annuels</li>
 </ol>
 </section></section>
 <section>
-<section id="analyse-dun-jeu-de-données" class="title-slide slide level1">
+<section id="analyse" class="title-slide slide level1">
 <h1>6. Analyse d’un jeu de données</h1>
 
 </section>
@@ -4206,7 +4206,7 @@ la fonction <code>summary</code> alors davantage d’informations</p>
 personnes sans diplômes) et proprio</p>
 </section></section>
 <section>
-<section id="visualisation-dun-jeu-de-données" class="title-slide slide level1">
+<section id="visualisation" class="title-slide slide level1">
 <h1>7. Visualisation d’un jeu de données</h1>
 
 </section>
